@@ -1,3 +1,3 @@
 #region {
-    background: ${options.color};
+    background: ${options/color};
 }
