@@ -1,11 +1,11 @@
 import pagetemplate
 
-class TextTemplate(pagetemplate.PageTemplate):
-    __doc__ = pagetemplate.PageTemplate.__doc__ # for Sphinx autodoc
+class TextTemplate(pagetemplate.ZopePageTemplate):
+    __doc__ = pagetemplate.ZopePageTemplate.__doc__ # for Sphinx autodoc
     format = 'text'
 
-class TextTemplateFile(pagetemplate.PageTemplateFile):
-    __doc__ = pagetemplate.PageTemplateFile.__doc__ # for Sphinx autodoc
+class TextTemplateFile(pagetemplate.ZopePageTemplateFile):
+    __doc__ = pagetemplate.ZopePageTemplateFile.__doc__ # for Sphinx autodoc
     format = 'text'
 
 class ViewTextTemplate(pagetemplate.ViewPageTemplate):
